Fixed card description overflow

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -16,7 +16,7 @@
     font-family: 'Roboto', sans-serif;
     font-weight: lighter;
     color: white;
-    padding-top: 100px;
+    padding-top: 65px;
     @media (max-width: 480px) {
       padding-top: 150px;
   }
