--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -136,3 +136,7 @@
 .lighter {
   font-weight: lighter;
 }
+
+.overview {
+  height: 90px;
+}
